--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "author": "Nathan Cahill",
   "license": "MIT",
+  "repository": "github:nathancahill/figma-react-svg",
+  "homepage": "https://github.com/nathancahill/figma-react-svg",
   "bin": {
     "figma-react-svg": "./figma-react-svg.mjs"
   },
